kubernetes/apps/kube-system/cilium/policies/allow-longhorn-backup-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-longhorn-backup-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: longhorn-system
  egress:
    - toCIDR:
        - 10.25.30.1/32
      toPorts:
        - ports:
            - port: "445"
              protocol: TCP
